Version 6.5
TODO
    - fix #23: port getmail-gmail-xoauth-tokens

Version 6.4
24 August 2020
    - fix #20: mboxrd can't concat str to bytes
    - fix #21: version numbering from 6.0x to 6.x

Version 6.03
17 August 2020
    - fix #14: IDLE not working
    - documentation update

Version 6.02
12 August 2020
    - try to do as little own decoding as possible
    - issue #8

Version 6.01
    - fixes of reported issues on github up to #7

Version 6.00
02 May 2020
    - Make code compatible to Python 3 (losing some backward compatibility)

Version 5.14
19 August 2019
    -remove socket setblocking() calls which should be no longer needed,
    and which may have caused hangups.  Thanks: Viacheslav Chimishuk.
    -correct version number string in error message.  Thanks: Piet van
    Oostrum.

Version 5.13
22 February 2019
    -second attempt at fixing SNI change with Python < 2.7.  Thanks: "Cimbal".

Version 5.12
22 February 2019
    -bugfix: the SNI change broke something else with Python 2.6 and earlier;
    fixed.  Thanks: "Cimbal".

Version 5.11
13 February 2019
    -bugfix: the SNI change did not work correctly with Python < 2.7.13;
    should be fixed now.  Thanks: Scott Robbins.

Version 5.10
12 February 2019
    -experimental: when SSL SNI support is present in the underlying Python
    (and OpenSSL), send SNI by default in the SSL setup.  This should work
    around Gmail's brokenness with TLSv.1.3 connections when SNI is not sent.

Version 5.9
    -documentation-only update; add note with workaround for Gmail SSL
    connections with OpenSSL 1.1.1 and later.
    -update copyright dates.

Version 5.8
9 November 2018
    -fix problem handling IMAP errors introduced in 5.7.  Thanks:
    Andreas Reuleaux.

Version 5.7
30 October 2018
    -when users specify an SSL version that no longer exists in the Python
    ssl module, do not result in an unhandled exception.  Thanks: "nandre".
    -catch IMAP UNAVAILABLE temporary error during login.  Thanks:
    Dario Corti.
