@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
     <meta http-equiv="content-type" content="application/xhtml+xml;charset=iso-8859-1" />
-    <title>getmail configuration (version 6)</title>
+    <title>getmail configuration</title>
     <meta name="author" content="Charles Cazabon and others" />
     <meta name="description" content="Official documentation for getmail version 6, an extensible mail-retrieval program with support for POP3, IMAP, SDPS, SSL, domain mailboxes, message filtering, and other features." />
     <meta name="keywords" content="getmail, getmail 6, getmail6, POP3, IMAP, SSL, domain mailbox, multidrop, fetchmail replacement, message filtering, maildir, mboxrd, MDA" />
@@ -15,16 +15,17 @@
     <div class="content">
 <h1 id="title">getmail documentation</h1>
 <p class="introduction">
-    This is the documentation for getmail version 6.
+    This is the documentation for getmail version 6,
+    a port of getmail version 5 to python 3 without adding features.
 </p>
 <p class="about">
     getmail is Copyright &copy; 1998-2019 by Charles Cazabon
     &lt;charlesc-getmail @ pyropus.ca&gt;<br>
-	and &copy; 2020 by Roland Puntaier
+    and getmail6 is maintained by Roland Puntaier since 2020
     &lt;roland.puntaier @ gmail.com&gt;
 </p>
 <p class="about">
-    getmail is licensed under the
+    getmail and getmail6 are licensed under the
     <a href="COPYING">GNU General Public License version 2</a> (only).
 </p>
 
