@@ -2,13 +2,16 @@
 
                              getmail documentation
 
-   This is the documentation for getmail version 6.
+   This is the documentation for getmail version 6, a port of getmail version
+   5 to python 3 without adding features.
 
    getmail is Copyright © 1998-2019 by Charles Cazabon <charlesc-getmail @
    pyropus.ca>
-   and © 2020 by Roland Puntaier <roland.puntaier @ gmail.com>
+   and getmail6 is maintained by Roland Puntaier since 2020 <roland.puntaier
+   @ gmail.com>
 
-   getmail is licensed under the GNU General Public License version 2 (only).
+   getmail and getmail6 are licensed under the GNU General Public License
+   version 2 (only).
 
                                Table of Contents
 
