@@ -1,16 +1,19 @@
                              getmail documentation
 
-   This is the documentation for getmail version 6.
+   This is the documentation for getmail version 6, a port of getmail version
+   5 to python 3 without adding features.
 
    getmail is Copyright © 1998-2019 by Charles Cazabon <charlesc-getmail @
    pyropus.ca>
-   and © 2020 by Roland Puntaier <roland.puntaier @ gmail.com>
+   and getmail6 is maintained by Roland Puntaier since 2020 <roland.puntaier
+   @ gmail.com>
 
-   getmail is licensed under the GNU General Public License version 2 (only).
+   getmail and getmail6 are licensed under the GNU General Public License
+   version 2 (only).
 
                                Table of Contents
 
-     * getmail documentation (version 6)
+     * getmail documentation
      *    * getmail documentation
           *    * Features
                * Requirements
@@ -33,12 +36,12 @@
           *    * Commandline options
                * Using getmail as an MDA
                * Using getmail_fetch to retrieve mail from scripts
-     * getmail troubleshooting (version 6)
+     * getmail troubleshooting
      *    * Troubleshooting problems
           *    * Error messages
                * Warning messages
                * Unexpected Behaviour
-     * getmail frequently-asked questions (FAQs) (version 6)
+     * getmail frequently-asked questions (FAQs)
      *    * Frequently-Asked Questions (FAQs)
           *    * About getmail
                * What is getmail6 and how does it relate to getmail?
@@ -55,7 +58,7 @@ Features
    flexible, reliable, and easy-to-use. getmail is designed to replace other
    mail retrievers such as fetchmail.
 
-   getmail version 6 includes the following features:
+   getmail includes the following features:
 
      * simple to install, configure, and use
      * retrieve virtually any mail
@@ -93,10 +96,10 @@ Features
 
 Requirements
 
-   getmail version 6 requires Python version 3 or later. If you have only an
-   earlier version of Python available, you can install the latest version
-   without disturbing your current version, or use getmail version 5.* from
-   the original getmail author.
+   getmail version 6 requires Python version 3 or later. Python 2.7.18 should
+   also work. If you have only an earlier version of Python available, you
+   can install the latest version without disturbing your current version, or
+   use getmail version 5.* from the original getmail author.
 
    getmail 6 requires that servers uniquely identify the messages they
    provide (via the UIDL command) to getmail for full functionality. Certain
