@@ -17,7 +17,7 @@
 <p class="about">
     getmail is Copyright &copy; 1998-2019 by Charles Cazabon
     &lt;charlesc-getmail @ pyropus.ca&gt;<br>
-	and &copy; 2020 by Roland Puntaier
+    and getmail6 is maintained by Roland Puntaier since 2020
     &lt;roland.puntaier @ gmail.com&gt;
 </p>
 <p class="about">
@@ -27,7 +27,7 @@
 
 <h1 id="toc">Table of Contents</h1>
 <ul>
-    <li><a href="documentation.html">getmail documentation (version 6)</a></li>
+    <li><a href="documentation.html">getmail documentation</a></li>
     <li>
         <ul>
         <li><a href="documentation.html#title">getmail documentation</a></li>
@@ -60,7 +60,7 @@
         </li>
         </ul>
     </li>
-    <li><a href="troubleshooting.html">getmail troubleshooting (version 6)</a></li>
+    <li><a href="troubleshooting.html">getmail troubleshooting</a></li>
     <li>
         <ul>
         <li><a href="troubleshooting.html#troubleshooting">Troubleshooting problems</a></li>
@@ -73,7 +73,7 @@
         </li>
         </ul>
     </li>
-    <li><a href="faq.html">getmail frequently-asked questions (FAQs) (version 6)</a></li>
+    <li><a href="faq.html">getmail frequently-asked questions (FAQs)</a></li>
     <li>
         <ul>
         <li><a href="faq.html#faq">Frequently-Asked Questions (FAQs)</a></li>
