@@ -2,13 +2,14 @@
 
    getmail is Copyright © 1998-2019 by Charles Cazabon <charlesc-getmail @
    pyropus.ca>
-   and © 2020 by Roland Puntaier <roland.puntaier @ gmail.com>
+   and getmail6 is maintained by Roland Puntaier since 2020 <roland.puntaier
+   @ gmail.com>
 
    getmail is licensed under the GNU General Public License version 2 (only).
 
                                Table of Contents
 
-     * getmail documentation (version 6)
+     * getmail documentation
      *    * getmail documentation
           *    * Features
                * Requirements
@@ -21,12 +22,12 @@
           *    * Commandline options
                * Using getmail as an MDA
                * Using getmail_fetch to retrieve mail from scripts
-     * getmail troubleshooting (version 6)
+     * getmail troubleshooting
      *    * Troubleshooting problems
           *    * Error messages
                * Warning messages
                * Unexpected Behaviour
-     * getmail frequently-asked questions (FAQs) (version 6)
+     * getmail frequently-asked questions (FAQs)
      *    * Frequently-Asked Questions (FAQs)
           *    * About getmail
                *    * What is getmail?
