@@ -16,22 +16,23 @@
 
 <!----><h1 id="title">getmail documentation</h1>
 <p class="introduction">
-    This is the documentation for getmail version 6.
+    This is the documentation for getmail version 6,
+    a port of getmail version 5 to python 3 without adding features.
 </p>
 <p class="about">
-    getmail is Copyright &copy; 1998-2019 Charles Cazabon.
-	&lt;charlesc-getmail @ pyropus.ca&gt;<br>
-	and &copy; 2020 by Roland Puntaier
+    getmail is Copyright &copy; 1998-2019 by Charles Cazabon
+    &lt;charlesc-getmail @ pyropus.ca&gt;<br>
+    and getmail6 is maintained by Roland Puntaier since 2020
     &lt;roland.puntaier @ gmail.com&gt;
 </p>
 <p class="about">
-    getmail is licensed under the
+    getmail and getmail6 are licensed under the
     <a href="COPYING">GNU General Public License version 2</a> (only).
 </p>
 
 <h1 id="toc">Table of Contents</h1>
 <ul>
-    <li><a href="documentation.html">getmail documentation (version 6)</a></li>
+    <li><a href="documentation.html">getmail documentation</a></li>
     <li>
         <ul>
         <li><a href="documentation.html#title">getmail documentation</a></li>
@@ -45,7 +46,7 @@
         </li>
         </ul>
     </li>
-    <li><a href="configuration.html">getmail configuration (version 6)</a></li>
+    <li><a href="configuration.html">getmail configuration</a></li>
     <li>
         <ul>
         <li><a href="configuration.html#configuring">Configuring getmail</a></li>
@@ -64,7 +65,7 @@
         </li>
         </ul>
     </li>
-    <li><a href="troubleshooting.html">getmail troubleshooting (version 6)</a></li>
+    <li><a href="troubleshooting.html">getmail troubleshooting</a></li>
     <li>
         <ul>
         <li><a href="troubleshooting.html#troubleshooting">Troubleshooting problems</a></li>
