@@ -1,6 +1,7 @@
 Version 6.5
 TODO
     - fix #23: port getmail-gmail-xoauth-tokens
+    - documentation fixes
 
 Version 6.4
 24 August 2020
